# roboprivate

./: .gitignore  .gitmodules  README.md  deleteme.sh
cpp_opencv_002/: docker-compose.yml  example.cpp
cuda/: README.md
framework_gazebo/: Dockerfile  README.md
framework_gazebo/001_building_your_own_robot/: docker-compose.yml
framework_px4/: Dockerfile  build.sh
framework_qemu/: README.md
framework_qgroundcontrol/: Dockerfile  README.md  docker-compose.yml
opencl/: CMakeLists.txt  README.md  vector_add.c  vector_add.cl
opencl_002_hello_opencl/: CMakeLists.txt  HelloOpenCL  README.md
opengl/: CMakeLists.txt  README.md  main.cpp
robo_000_gazebo/: README.md  framework_gazebo
robo_000_gazebo/ros_scripts/: 008.sh  goto.py  lawnmower.py
robo_000a_ros_only/: docker-compose.yml
robo_000a_ros_only/ros_scripts/: push.sh
robo_000b_gazebo/: README.md  docker-compose.yml
robo_001_turtlesim_teleop/: README.md  docker-compose.yml
robo_002_turtlesim_push/: README.md  docker-compose.yml
robo_003_turtlesim_spiral/: README.md  docker-compose.yml  robo_turtlesim
robo_003_turtlesim_spiral/ros_scripts/: pub_spiral.py
robo_004_turtlesim_goto/: README.md  docker-compose.yml
robo_005_turtlesim_lawnmower/: README.md  docker-compose.yml
robo_007_nav2_reference/: Dockerfile  README.md  docker-compose.yml  ideas.md  run.sh
robo_007_nav2_reference/ros_scripts/: nav2.sh
robo_008_px4_qgroundcontrol/: Dockerfile  README.md  docker-compose.yml
robo_009_bridge_px4_ros/: docker-compose.yml
robo_010_bridge_px4_ros_jmavsim/: docker-compose.yml  framework_qgroundcontrol  ros_px4
robo_011_px4_ros_jmavsim_control/: Dockerfile  README.md  robo_008_px4_qgroundcontrol
robo_011_px4_ros_jmavsim_control/ros_scripts/: 008.sh  010.sh
robo_012_opencv/: CMakeLists.txt  Dockerfile  docker-compose.yml  example.cpp
robo_013_opencv_tag/: README.md  docker-compose.yml  example.cpp  opencv001.py
robo_areacoverage/: example001.py
robo_docker_gazebo/: Dockerfile  README.md  docker-compose.yml  ros2_turtlesim
robo_docker_gazebo/robo-turtlesim-docker-teleop/: Dockerfile
robo_docker_rqt/: Dockerfile  README.md  docker-compose.yml
robo_sim/: Dockerfile  README.md  docker-compose.yml
robo_sim_rviz_native/: Dockerfile  README.md  docker-compose.yml  push.sh
robo_turtlesim/: Dockerfile  docker-compose.yml
robo_turtlesim_docker/: README.md  docker-compose.yml  docker_wsl_gui_passthrough
unit_000_a_demos_slam_with_opencl/: CMakeLists.txt  docker-compose.yml  simulate_data.py  slam_host.cpp  slam_kernel.cl
unit_000_d_demos_dqn_on_opencl/: README.md
unit_000_demos_nlp_with_opencl/: README.md
unit_000_demos_object_detection_with_opencl/: README.md
unit_000_demos_sha256_with_opencl/: README.md
unit_000_demos_slam_with_opencl/: README.md
unit_000_e_demos_sha256_with_opencl/: sha256_kernel.cl
unit_000_f_demos_matrix_mult/: CMakeLists.txt  Dockerfile  matrix_mul_host.cpp  matrix_mul_kernel.cl  sha256_host.cpp
unit_001_a_foundations_of_machine_learning_introduction_to_machine_learning/: README.md
unit_001_foundations_of_machine_learning_data_preprocessing/: README.md
unit_001_foundations_of_machine_learning_feature_engineering/: README.md
unit_001_foundations_of_machine_learning_history_of_machine_learning/: README.md
unit_001_foundations_of_machine_learning_linear_and_logistic_regression/: README.md
unit_001_foundations_of_machine_learning_statistical_foundations/: README.md
unit_001_foundations_of_machine_learning_types_of_machine_learning/: README.md
unit_001_g_oundations_of_machine_learning_bias_variance_tradeoff/: README.md
unit_002_b_foundations_of_gpu_programming_understanding_gpu_architecture/: README.md
unit_002_c_foundations_of_gpu_programming_basic_opencl_programming_platform_and_device_management/: README.md
unit_002_f_foundations_of_gpu_programming_relooking_at_sha256_reference_to_understand_the_anatomy_of_an_opencl_application/: README.md
unit_002_foundations_of_gpu_programming_3d_graphics_and_transformations/: README.md
unit_002_foundations_of_gpu_programming_gpu_profiling_and_optimization_techniques/: README.md
unit_002_foundations_of_gpu_programming_introduction_to_parallel_computing_concepts/: README.md
unit_003_c_core_machine_learning_algorithms_k_nearest_neighbors/: README.md
unit_003_core_machine_learning_algorithms_decision_trees_and_random_forests/: README.md
unit_003_core_machine_learning_algorithms_dimensionality_reduction/: README.md
unit_003_core_machine_learning_algorithms_naive_bayes_classifier/: README.md
unit_003_core_machine_learning_algorithms_support_vector_machines_and_kernel_trick/: README.md
unit_003_e_core_machine_learning_algorithms_clustering_techniques/: README.md
